@@ -226,7 +226,7 @@ public class ICUCollationField extends FieldType {
   }
 
   @Override
-  public Analyzer getAnalyzer() {
+  public Analyzer getIndexAnalyzer() {
     return analyzer;
   }
 
