@@ -97,7 +97,7 @@ public class BoolField extends PrimitiveFieldType {
 
 
   @Override
-  public Analyzer getAnalyzer() {
+  public Analyzer getIndexAnalyzer() {
     return boolAnalyzer;
   }
 
