@@ -167,7 +167,7 @@ public abstract class FieldType extends FieldProperties {
 
     String positionInc = initArgs.get(POSITION_INCREMENT_GAP);
     if (positionInc != null) {
-      Analyzer analyzer = getAnalyzer();
+      Analyzer analyzer = getIndexAnalyzer();
       if (analyzer instanceof SolrAnalyzer) {
         ((SolrAnalyzer)analyzer).setPositionIncrementGap(Integer.parseInt(positionInc));
       } else {
@@ -214,7 +214,7 @@ public abstract class FieldType extends FieldProperties {
   public String toString() {
     return typeName + "{class=" + this.getClass().getName()
 //            + propertiesToString(properties)
-            + (analyzer != null ? ",analyzer=" + analyzer.getClass().getName() : "")
+            + (indexAnalyzer != null ? ",analyzer=" + indexAnalyzer.getClass().getName() : "")
             + ",args=" + args
             +"}";
   }
@@ -481,23 +481,22 @@ public abstract class FieldType extends FieldProperties {
     }
   }
 
-  /**
-   * Analyzer set by schema for text types to use when indexing fields
-   * of this type, subclasses can set analyzer themselves or override
-   * getAnalyzer()
-   * @see #getAnalyzer
-   * @see #setAnalyzer
-   */
-  protected Analyzer analyzer=new DefaultAnalyzer(256);
+  private Analyzer indexAnalyzer = new DefaultAnalyzer(256);
+
+  private Analyzer queryAnalyzer = indexAnalyzer;
 
   /**
-   * Analyzer set by schema for text types to use when searching fields
-   * of this type, subclasses can set analyzer themselves or override
-   * getAnalyzer()
+   * Returns the Analyzer to be used when indexing fields of this type.
+   * <p>
+   * This method may be called many times, at any time.
+   * </p>
    * @see #getQueryAnalyzer
-   * @see #setQueryAnalyzer
+   * @deprecated (4.9) Use {@link #getIndexAnalyzer()} instead.
    */
-  protected Analyzer queryAnalyzer=analyzer;
+  @Deprecated
+  public Analyzer getAnalyzer() {
+    return indexAnalyzer;
+  }
 
   /**
    * Returns the Analyzer to be used when indexing fields of this type.
@@ -506,8 +505,9 @@ public abstract class FieldType extends FieldProperties {
    * </p>
    * @see #getQueryAnalyzer
    */
-  public Analyzer getAnalyzer() {
-    return analyzer;
+  @SuppressWarnings("deprecation")
+  public Analyzer getIndexAnalyzer() {
+    return getAnalyzer();
   }
 
   /**
@@ -515,51 +515,82 @@ public abstract class FieldType extends FieldProperties {
    * <p>
    * This method may be called many times, at any time.
    * </p>
-   * @see #getAnalyzer
+   * @see #getIndexAnalyzer
    */
   public Analyzer getQueryAnalyzer() {
     return queryAnalyzer;
   }
 
+  /**
+   * Returns true if this type supports index and query analyzers, false otherwise.
+   */
+  protected boolean supportsAnalyzers() {
+    return false;
+  }
 
   /**
    * Sets the Analyzer to be used when indexing fields of this type.
    *
    * <p>
-   * The default implementation throws a SolrException.  
-   * Subclasses that override this method need to ensure the behavior 
+   * The default implementation throws a SolrException.
+   * Subclasses that override this method need to ensure the behavior
    * of the analyzer is consistent with the implementation of toInternal.
    * </p>
-   * 
+   *
    * @see #toInternal
    * @see #setQueryAnalyzer
-   * @see #getAnalyzer
+   * @see #getIndexAnalyzer
+   * @deprecated (4.9) Use {@link #setIndexAnalyzer(org.apache.lucene.analysis.Analyzer)} instead.
    */
+  @Deprecated
   public void setAnalyzer(Analyzer analyzer) {
-    throw new SolrException
-      (ErrorCode.SERVER_ERROR,
-       "FieldType: " + this.getClass().getSimpleName() + 
-       " (" + typeName + ") does not support specifying an analyzer");
+    if (supportsAnalyzers()) {
+      indexAnalyzer = analyzer;
+    } else {
+      throw new SolrException
+        (ErrorCode.SERVER_ERROR,
+         "FieldType: " + this.getClass().getSimpleName() +
+         " (" + typeName + ") does not support specifying an analyzer");
+    }
+  }
+
+  /**
+   * Sets the Analyzer to be used when indexing fields of this type.
+   *
+   * <p>
+   * Subclasses should override {@link #supportsAnalyzers()} to
+   * enable this function.
+   * </p>
+   *
+   * @see #supportsAnalyzers()
+   * @see #setQueryAnalyzer
+   * @see #getIndexAnalyzer
+   */
+  public final void setIndexAnalyzer(Analyzer analyzer) {
+    setAnalyzer(analyzer);
   }
 
   /**
    * Sets the Analyzer to be used when querying fields of this type.
    *
    * <p>
-   * The default implementation throws a SolrException.  
-   * Subclasses that override this method need to ensure the behavior 
-   * of the analyzer is consistent with the implementation of toInternal.
+   * Subclasses should override {@link #supportsAnalyzers()} to
+   * enable this function.
    * </p>
-   * 
-   * @see #toInternal
-   * @see #setAnalyzer
+   *
+   * @see #supportsAnalyzers()
+   * @see #setIndexAnalyzer
    * @see #getQueryAnalyzer
    */
-  public void setQueryAnalyzer(Analyzer analyzer) {
-    throw new SolrException
-      (ErrorCode.SERVER_ERROR,
-       "FieldType: " + this.getClass().getSimpleName() +
-       " (" + typeName + ") does not support specifying an analyzer");
+  public final void setQueryAnalyzer(Analyzer analyzer) {
+    if (supportsAnalyzers()) {
+      queryAnalyzer = analyzer;
+    } else {
+      throw new SolrException
+        (ErrorCode.SERVER_ERROR,
+         "FieldType: " + this.getClass().getSimpleName() +
+         " (" + typeName + ") does not support specifying an analyzer");
+    }
   }
 
   /** @lucene.internal */
@@ -845,7 +876,7 @@ public abstract class FieldType extends FieldProperties {
     
     if (isExplicitAnalyzer()) {
       String analyzerProperty = isExplicitQueryAnalyzer() ? INDEX_ANALYZER : ANALYZER;
-      namedPropertyValues.add(analyzerProperty, getAnalyzerProperties(getAnalyzer()));
+      namedPropertyValues.add(analyzerProperty, getAnalyzerProperties(getIndexAnalyzer()));
     } 
     if (isExplicitQueryAnalyzer()) {
       String analyzerProperty = isExplicitAnalyzer() ? QUERY_ANALYZER : ANALYZER;
