@@ -49,7 +49,6 @@ import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpressionException;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.ArrayList;
@@ -126,7 +125,7 @@ public class IndexSchema {
   protected volatile DynamicField[] dynamicFields;
   public DynamicField[] getDynamicFields() { return dynamicFields; }
 
-  private Analyzer analyzer;
+  private Analyzer indexAnalyzer;
   private Analyzer queryAnalyzer;
 
   protected List<SchemaAware> schemaAware = new ArrayList<>();
@@ -273,8 +272,23 @@ public class IndexSchema {
    * This Analyzer is field (and dynamic field) name aware, and delegates to
    * a field specific Analyzer based on the field type.
    * </p>
+   * @deprecated (4.9) Use {@link #getIndexAnalyzer()} instead.
    */
-  public Analyzer getAnalyzer() { return analyzer; }
+  @Deprecated
+  public Analyzer getAnalyzer() { return indexAnalyzer; }
+
+  /**
+   * Returns the Analyzer used when indexing documents for this index
+   *
+   * <p>
+   * This Analyzer is field (and dynamic field) name aware, and delegates to
+   * a field specific Analyzer based on the field type.
+   * </p>
+   */
+  @SuppressWarnings("deprecation")
+  public Analyzer getIndexAnalyzer() {
+    return getAnalyzer();
+  }
 
   /**
    * Returns the Analyzer used when searching this index
@@ -353,7 +367,7 @@ public class IndexSchema {
    * @since solr 1.3
    */
   public void refreshAnalyzers() {
-    analyzer = new SolrIndexAnalyzer();
+    indexAnalyzer = new SolrIndexAnalyzer();
     queryAnalyzer = new SolrQueryAnalyzer();
   }
 
@@ -386,7 +400,7 @@ public class IndexSchema {
     protected HashMap<String, Analyzer> analyzerCache() {
       HashMap<String, Analyzer> cache = new HashMap<>();
       for (SchemaField f : getFields().values()) {
-        Analyzer analyzer = f.getType().getAnalyzer();
+        Analyzer analyzer = f.getType().getIndexAnalyzer();
         cache.put(f.getName(), analyzer);
       }
       return cache;
@@ -395,7 +409,7 @@ public class IndexSchema {
     @Override
     protected Analyzer getWrappedAnalyzer(String fieldName) {
       Analyzer analyzer = analyzers.get(fieldName);
-      return analyzer != null ? analyzer : getDynamicFieldType(fieldName).getAnalyzer();
+      return analyzer != null ? analyzer : getDynamicFieldType(fieldName).getIndexAnalyzer();
     }
 
   }
