@@ -61,8 +61,6 @@ public class TrieDateField extends DateField implements DateValueFieldType {
   @Override
   protected void init(IndexSchema schema, Map<String, String> args) {
     wrappedField.init(schema, args);
-    analyzer = wrappedField.analyzer;
-    queryAnalyzer = wrappedField.queryAnalyzer;
   }
 
   @Override
